<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chala.inclass08_schalas1.ShowByRating">

    <!--

Assignment -Homework 2 .
File Name -movieByRating.xml
Group - Dhenuka Bhargavi Rangam(UNCC ID:800963261)
      - Sunisha Chalasani(UNCC ID:800962445)

-->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_movie_by_rating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ranga.movies.MovieByRating">

        <TextView
            android:text="@string/movie_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/title_sy_label"
            android:layout_width="100dp"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="36dp"
            android:id="@+id/textView22"
            android:layout_alignRight="@+id/previous_sr"
            android:layout_alignEnd="@+id/previous_sr"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/descr_label"
            android:layout_width="100dp"
            android:layout_below="@+id/textView22"
            android:layout_alignLeft="@+id/textView22"
            android:layout_alignStart="@+id/textView22"
            android:layout_marginTop="20dp"
            android:id="@+id/textView25"
            android:layout_alignRight="@+id/textView22"
            android:layout_alignEnd="@+id/textView22"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/title_sr_value"
            android:layout_width="100dp"
            android:id="@+id/Title_ID_SR"
            android:layout_alignBaseline="@+id/textView22"
            android:layout_alignBottom="@+id/textView22"
            android:layout_toRightOf="@+id/textView25"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_alignRight="@+id/Desc_ID_SR"
            android:layout_alignEnd="@+id/Desc_ID_SR"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/description_sr_value"
            android:layout_width="290dp"
            android:layout_height="80dp"
            android:id="@+id/Desc_ID_SR"
            android:layout_below="@+id/textView25"
            android:layout_alignLeft="@+id/textView25"
            android:layout_alignStart="@+id/textView25"
            android:layout_marginTop="15dp" />

        <TextView
            android:text="@string/genre_l"
            android:layout_width="100dp"
            android:layout_below="@+id/Desc_ID_SR"
            android:layout_alignLeft="@+id/Desc_ID_SR"
            android:layout_alignStart="@+id/Desc_ID_SR"
            android:layout_marginTop="20dp"
            android:id="@+id/textView27"
            android:layout_alignRight="@+id/textView25"
            android:layout_alignEnd="@+id/textView25"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/genre_sr_value"
            android:layout_width="100dp"
            android:id="@+id/Genre_ID_SR"
            android:layout_alignBaseline="@+id/textView27"
            android:layout_alignBottom="@+id/textView27"
            android:layout_alignLeft="@+id/Title_ID_SR"
            android:layout_alignStart="@+id/Title_ID_SR"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/Desc_ID_SR"
            android:layout_alignEnd="@+id/Desc_ID_SR"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/rating_l"
            android:layout_width="100dp"
            android:layout_below="@+id/textView27"
            android:layout_alignLeft="@+id/textView27"
            android:layout_alignStart="@+id/textView27"
            android:layout_marginTop="15dp"
            android:id="@+id/textView29"
            android:layout_alignRight="@+id/textView27"
            android:layout_alignEnd="@+id/textView27"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/rating_sr_value"
            android:layout_width="100dp"
            android:layout_alignBottom="@+id/textView29"
            android:id="@+id/Rating_ID_SR"
            android:layout_alignLeft="@+id/Genre_ID_SR"
            android:layout_alignStart="@+id/Genre_ID_SR"
            android:layout_alignRight="@+id/Genre_ID_SR"
            android:layout_alignEnd="@+id/Genre_ID_SR"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/year_l"
            android:layout_width="100dp"
            android:layout_below="@+id/textView29"
            android:layout_alignLeft="@+id/textView29"
            android:layout_alignStart="@+id/textView29"
            android:layout_marginTop="20dp"
            android:id="@+id/textView31"
            android:layout_alignRight="@+id/textView29"
            android:layout_alignEnd="@+id/textView29"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/year_sr_value"
            android:layout_width="100dp"
            android:layout_alignBottom="@+id/textView31"
            android:layout_alignLeft="@+id/Rating_ID_SR"
            android:layout_alignStart="@+id/Rating_ID_SR"
            android:id="@+id/Year_ID_SR"
            android:layout_alignRight="@+id/Rating_ID_SR"
            android:layout_alignEnd="@+id/Rating_ID_SR"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/imdb_l"
            android:layout_width="100dp"
            android:layout_below="@+id/textView31"
            android:layout_alignLeft="@+id/textView31"
            android:layout_alignStart="@+id/textView31"
            android:layout_marginTop="20dp"
            android:id="@+id/textView33"
            android:layout_alignRight="@+id/textView31"
            android:layout_alignEnd="@+id/textView31"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/imdb_sr_value"
            android:layout_width="100dp"
            android:id="@+id/IMDB_ID_SR"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/textView33"
            android:layout_alignBottom="@+id/textView33"
            android:layout_toLeftOf="@+id/next_sr"
            android:layout_toStartOf="@+id/next_sr"
            android:layout_marginRight="23dp"
            android:layout_marginEnd="23dp" />

        <ImageView
            android:layout_width="50dp"
            app:srcCompat="@drawable/first"
            android:id="@+id/first_sr"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="50dp"
            app:srcCompat="@drawable/last"
            android:id="@+id/last_sr"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="50dp"
            app:srcCompat="@drawable/previous"
            android:id="@+id/previous_sr"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/finish_id_sr"
            android:layout_toStartOf="@+id/finish_id_sr" />

        <Button
            android:text="@string/finish_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finish_id_sr"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            app:srcCompat="@drawable/next"
            android:id="@+id/next_sr"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3" />

    </RelativeLayout>


</FrameLayout>
