<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chala.inclass08_schalas1.AddMovie"
    android:id="@+id/addFrag">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ranga.movies.AddMovie">

        <TextView
            android:text="@string/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="34dp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name_ed_l"
            android:ems="10"
            android:layout_alignBottom="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/addName"
            android:maxLength="50"/>

        <TextView
            android:text="@string/descr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="29dp"
            android:id="@+id/textView2" />

        <EditText
            android:text="@string/descr_ed_l"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_marginTop="10dp"
            android:id="@+id/addDesc"
            android:layout_alignRight="@+id/addName"
            android:layout_alignEnd="@+id/addName"
            android:maxLength="1000"></EditText>

        <TextView
            android:text="@string/genre_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/addDesc"
            android:layout_alignStart="@+id/addDesc" />

        <TextView
            android:text="@string/rating_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginTop="32dp"
            android:id="@+id/textView5" />

        <TextView
            android:text="@string/year_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_alignRight="@+id/textView5"
            android:layout_alignEnd="@+id/textView5"
            android:layout_marginTop="39dp"
            android:id="@+id/textView6"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <TextView
            android:text="@string/imdb_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_marginTop="34dp"
            android:id="@+id/textView7"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView5"
            android:id="@+id/spinner1"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2" />

        <SeekBar
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:id="@+id/seekBar1"
            android:layout_alignLeft="@+id/spinner1"
            android:layout_alignStart="@+id/spinner1"
            android:max="5"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:ems="10"
            android:layout_alignBottom="@+id/textView6"
            android:id="@+id/addYear"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/seekBar1"
            android:layout_alignStart="@+id/seekBar1"
            android:layout_below="@+id/seekBar1"
            android:inputType="number"
            android:maxLength="4"

            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/addYear"
            android:layout_alignStart="@+id/addYear"
            android:id="@+id/addIMDB"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/add_movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/add_button"
            android:layout_below="@+id/addIMDB"
            android:layout_centerHorizontal="true"
            android:onClick="addMovie"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/seekBar1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/seekbarValue" />

    </RelativeLayout>

</FrameLayout>
